[project]
name = "dogo-cam"
version = "0.1.0"
description = "Manual Raspberry Pi camera stream with pan and tilt servo controls"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask-httpauth",
    "picamera2",
    "python-dotenv",
    "adafruit-blinka",
    "adafruit-circuitpython-dht",
    "gunicorn",
]
